--- a/requirements.txt
+++ b/requirements.txt
@@ -12,25 +12,15 @@ fonttools==4.55.3
 fsspec==2024.12.0
 h11==0.14.0
 idna==3.10
+imageio==2.36.1
 Jinja2==3.1.5
 kiwisolver==1.4.8
+lazy_loader==0.4
 MarkupSafe==3.0.2
 matplotlib==3.10.0
 mpmath==1.3.0
 networkx==3.4.2
 numpy==2.2.1
-nvidia-cublas-cu12==12.4.5.8
-nvidia-cuda-cupti-cu12==12.4.127
-nvidia-cuda-nvrtc-cu12==12.4.127
-nvidia-cuda-runtime-cu12==12.4.127
-nvidia-cudnn-cu12==9.1.0.70
-nvidia-cufft-cu12==11.2.1.3
-nvidia-curand-cu12==10.3.5.147
-nvidia-cusolver-cu12==11.6.1.9
-nvidia-cusparse-cu12==12.3.1.170
-nvidia-nccl-cu12==2.21.5
-nvidia-nvjitlink-cu12==12.4.127
-nvidia-nvtx-cu12==12.4.127
 opencv-python==4.10.0.84
 packaging==24.2
 pandas==2.2.3
@@ -45,14 +35,15 @@ python-multipart==0.0.20
 pytz==2024.2
 PyYAML==6.0.2
 requests==2.32.3
+scikit-image==0.25.0
 scipy==1.14.1
 seaborn==0.13.2
 six==1.17.0
 sniffio==1.3.1
 starlette==0.41.3
 sympy==1.13.1
-torch==2.5.1
-torchvision==0.20.1
+tifffile==2024.12.12
+--extra-index-url https://download.pytorch.org/whl/cpu
 tqdm==4.67.1
 triton==3.1.0
 typing_extensions==4.12.2
