ingress for kube api server, updated infra README

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,9 @@
 *cache*/
 *upload*/
 yolo*
+
+infrastructure/terraform/.terraform/**
+infrastructure/terraform/.terraform.*
+infrastructure/terraform/terraform.tfstate*
+infrastructure/terraform/local/**
+infrastructure/kubeconfig
