--- a/infrastructure/gitops/services/ingress-nginx/helmrelease-ingress.yml
+++ b/infrastructure/gitops/services/ingress-nginx/helmrelease-ingress.yml
@@ -7,11 +7,11 @@ spec:
   interval: 5m
   chart:
     spec:
-      chart: argo-cd
-      version: "6.7.1"
+      chart: ingress-nginx
+      version: "4.11.4"
       sourceRef:
         kind: HelmRepository
-        name: argo-workflows
+        name: ingress-chart
   values:
     controller:
       config:
