--- a/infrastructure/gitops/app/fastapi/kustomization.yaml
+++ b/infrastructure/gitops/app/fastapi/kustomization.yaml
@@ -1,6 +1,8 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: fastapi
-
 resources:
-- namespace.yml
+  - namespace.yml
+  - deployment.yml
+  - service.yml
+  - ingress.yml
