--- a/infrastructure/gitops/app/fastapi/deployment.yml
+++ b/infrastructure/gitops/app/fastapi/deployment.yml
@@ -24,3 +24,5 @@ spec:
           limits:
             cpu: "1000m"
             memory: "3072Mi"
+      imagePullSecrets:
+        - name: ghcr-secret
