--- a/infrastructure/gitops/source/fastapi.yml
+++ b/infrastructure/gitops/source/fastapi.yml
@@ -1,14 +1,14 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: ingress-nginx
+  name: fastapi
   namespace: flux-system
 spec:
-  interval: 2m
+  interval: 5m
   sourceRef:
     kind: GitRepository
     name: flux-system
-  path: ./infrastructure/gitops/services/ingress-nginx
+  path: ./infrastructure/gitops/app/fastapi
   prune: false
   suspend: false
-  targetNamespace: ingress-nginx
+  targetNamespace: fastapi
