--- a/infrastructure/gitops/source/ingress-nginx.yml
+++ b/infrastructure/gitops/source/ingress-nginx.yml
@@ -1,14 +1,14 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: fastapi
+  name: ingress-nginx
   namespace: flux-system
 spec:
-  interval: 2m
+  interval: 5m
   sourceRef:
     kind: GitRepository
     name: flux-system
-  path: ./infrastructure/gitops/app/fastapi
+  path: ./infrastructure/gitops/service/ingress-nginx
   prune: false
   suspend: false
-  targetNamespace: fastapi
+  targetNamespace: ingress-nginx
