add path for swagger

--- a/infrastructure/gitops/app/fastapi/ingress.yml
+++ b/infrastructure/gitops/app/fastapi/ingress.yml
@@ -17,5 +17,5 @@ spec:
             name: backend
             port:
               number: 8000
-        path: /
+        path: /docs
         pathType: Prefix
