add fake domain name for ingress (app workload)

--- a/infrastructure/gitops/app/fastapi/ingress.yml
+++ b/infrastructure/gitops/app/fastapi/ingress.yml
@@ -5,11 +5,12 @@ metadata:
   annotations:
     kubernetes.io/ingress.class: nginx
 spec:
+  ingressClassName: nginx
   # tls:
   # - hosts:
-  #   - ec2-3-72-8-133.eu-central-1.compute.amazonaws.com
+  #   - fastapi-app.com
   rules:
-  - host: app-alb-2076960796.eu-central-1.elb.amazonaws.com
+  - host: fastapi-app.com # fake domain name, edit your hosts file and specify the Load Balancer IP for this domain
     http:
       paths:
       - backend:
