add container port

--- a/infrastructure/gitops/app/fastapi/deployment.yml
+++ b/infrastructure/gitops/app/fastapi/deployment.yml
@@ -17,6 +17,8 @@ spec:
       containers:
       - name: backend
         image: ghcr.io/ultrasaw/fastapi-image-detection:0.0.1
+        ports:
+        - containerPort: 8000
         resources:
           requests:
             cpu: "500m"
